--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
 
     /* Existing styles for the mobile collected toads box - remains hidden by default */
     .collected-toads-box {
-        display: none; /* This box is hidden globally by your current CSS */
+        display: block; /* This box is hidden globally by your current CSS */
         width: 180px; /* Fixed width for the box */
         height: 180px; /* Fixed height for the box */
         border: 5px solid #FFFFFF; /* White border */
