--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
 
     /* Styles for the "hopped" toads container - Desktop version hidden */
     .hopped-toad-container {
-        display: none; /* Hidden by default on desktop */
+        display: block; /* Hidden by default on desktop */
     }
 
     /* Existing styles for the mobile collected toads box - remains hidden by default */
