--- a/index.html
+++ b/index.html
@@ -658,12 +658,15 @@
         box-sizing: border-box;
         background-color: rgba(255, 255, 255, 0.1); /* Slightly transparent background */
         padding: 5px; /* Inner padding for the grid */
-    }
+        margin-top: 10px;    /* Pushes it down 10px from the top of its cell */
+        margin-left: 10px;    /* Pushes it right 5px from the left of its cell */
+    /* You can use negative margins too for very small overlaps */
+        }
 
     @media (min-width: 701px) { /* NEW MEDIA QUERY: Applies ONLY to desktop screens */
         .hero-header {
             display: grid; /* CHANGED FOR DESKTOP: Switch hero-header to Grid layout */
-            grid-template-columns: auto 180px 1fr; /* Defines 3 columns: Logo (auto), Toad Box (180px), Nav (remaining) */
+            grid-template-columns: auto 400px 1fr; /* Defines 3 columns: Logo (auto), Toad Box (180px), Nav (remaining) */
             grid-template-areas:
                 "logo desktop-toads-box nav"; /* Defines named areas for desktop layout */
             align-items: center; /* Vertically aligns items in the middle of their grid row */
