--- a/index.html
+++ b/index.html
@@ -650,18 +650,30 @@
 
     /* NEW: Base styles for the new desktop box - Add this after the above .collected-toads-box */
     .desktop-collected-toads-box {
-        display: none; /* Hidden by default, will be shown only on desktop */
-        width: 380px; /* Fixed width for the box */
-        height: 190px; /* Fixed height for the box */
-        border: 10px solid #FFFFFF; /* White border */
-        position: relative;
+        display: none; /* Keep hidden by default, will be shown via JS */
+        width: 380px; /* Fixed width as you desired */
         box-sizing: border-box;
+        padding: 5px; /* Inner padding */
+        margin-left: 10px; /* Maintains your horizontal margin */
+        overflow: hidden; /* Ensures content stays within bounds */
+        position: relative; /* Keep for potential future use or if needed by your JS */
+
+        /* --- Changes for Expanding Box Style --- */
+        /* REMOVE: height: 190px; (or whatever fixed height you had) */
+        height: auto; /* Allow the box to expand/contract based on content */
+        min-height: 40px; /* Minimum height, enough for one row of toads (adjust this value as needed) */
+
+        /* --- Changes for Top Alignment --- */
+        /* REMOVE: margin-top: 1px; (this would create an offset from the very top) */
+        align-self: start; /* Aligns the box to the very top of its grid row in .hero-header */
+
+        /* --- Revert to Solid Box Appearance --- */
+        border: 10px solid #FFFFFF; /* White border for a solid box */
         background-color: rgba(255, 255, 255, 0.1); /* Slightly transparent background */
-        padding: 5px; /* Inner padding for the grid */
-        margin-top: 1px;    /* Pushes it down 10px from the top of its cell */
-        margin-left: 10px;    /* Pushes it right 5px from the left of its cell */
-    /* You can use negative margins too for very small overlaps */
-        }
+
+        /* Make sure no pseudo-elements are here if you had added them for brackets */
+        /* E.g., remove any &::before, &::after rules if they are present for this selector */
+    }
 
     @media (min-width: 701px) { /* NEW MEDIA QUERY: Applies ONLY to desktop screens */
     .hero-header {
@@ -673,11 +685,26 @@
     }
 
     /* Add/modify this section for the desktop grid */
-    #desktopToadsGrid {
-        grid-template-columns: repeat(6, 1fr); /* Desktop grid columns */
-        grid-template-rows: repeat(6, 1fr);    /* Desktop grid rows */
-        /* You can also add/adjust 'gap' here if needed for desktop */
-        /* gap: 1px; */
+   #desktopToadsGrid {
+        display: grid;
+        grid-template-columns: repeat(8, 1fr); /* Your 8 columns */
+        /* REMOVE: grid-template-rows: repeat(8, 1fr); (or whatever fixed rows you had) */
+        grid-auto-rows: 40px; /* Each new row will automatically be 40px tall (match min-height above) */
+        gap: 2px; /* Adjust gap if needed */
+        width: 100%;
+        height: auto; /* Allow the grid's height to be determined by its rows */
+        overflow: hidden; /* Prevents scrollbars if content overflows */
+    }
+
+    /* --- Styles for individual toad images within the grid --- */
+    #desktopToadsGrid .hopped-toad {
+        width: 70%;   /* Keep the toads smaller within cells */
+        height: auto;
+        object-fit: contain;
+        image-rendering: crisp-edges;
+        image-rendering: -webkit-optimize-contrast;
+        display: block;
+        margin: auto;   /* Centers the image */
     }
 
         /* Assign existing elements to their grid areas on desktop */
